Update look and feel to make the app publish ready

--- a/.homeycompose/capabilities/measure_cop.json
+++ b/.homeycompose/capabilities/measure_cop.json
@@ -8,6 +8,7 @@
     "en": "Coefficient of Performance (thermal output / electrical input)",
     "nl": "Coëfficiënt van Prestatie (thermisch vermogen / elektrisch vermogen)"
   },
+  "icon": "/assets/cop.svg",
   "getable": true,
   "setable": false,
   "uiComponent": "sensor",
